# fullstop-deep-punctuation-prediction

./: .gitignore  README.md  augmentation.py  baseline_bert.py  baseline_bert_layer_prune.py  baseline_bert_task2.py  baseline_electra.py  baseline_electra_task2.py  baseline_longformer.py  baseline_multilingual_bert.py  baseline_pos_bert.py  baseline_roberta-large.py  baseline_spacy_sepp_nlg_2021_subtask1.py  baseline_xlm-roberta.py  dataset.py  download-dataset.sh  enable-deterministic-run.sh  evaluate_sepp_nlg_2021_subtask1.py  evaluate_sepp_nlg_2021_subtask2.py  hyperparameter-bert.py  hyperparameter-electra.py  hyperparameter-search.sh  model_final_suite_results_task1.json  model_final_suite_results_task2.json  model_final_suite_task1.json  model_final_suite_task2.json  model_test_report.py  model_test_suite.py  model_trainer.py  predict_all_task_1_models.sh  predict_all_task_2_models.sh  predict_roberta_large.sh  predict_transformer.py  predict_xlm_roberta.sh  pyproject.toml  readme.md  requirements.txt  run_baseline.sh  run_language_model_finetuneing.sh  run_mlm.py  (+1 more)
other_languages/: create_shared_task_data_from_text_file.py  readme.md
tests/: conftest.py  test_setup_validation.py
transformer/: __init__.py  data_loading.py
